[package]
name = "type-name-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
description = "Infrastructure to derive name of type - proc macro crate "
repository = "https://github.com/voelklmichael/type-name/"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
type-name = {path = "../type-name", version="0.1.1"}
