[package]
name = "typenaming-example"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
description = "Infrastructure to derive name of type - helper crate to test crate_version computation"
repository = "https://github.com/voelklmichael/type-name/"

[dependencies]
typenaming = {path = "../typenaming", version="0.1.0"}
typenaming-example-base = {path = "../typenaming-example-base/", version="0.4.2"}
