[package]
name = "typenaming"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
description = "Infrastructure to derive name of type"
repository = "https://github.com/voelklmichael/type-name/"


[dependencies]
rustc_version = "0.4.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
typenaming-derive = {path = "../typenaming-derive/", version="0.2.0"}

[dev-dependencies]
serde_json = "1.0"
